@@ -325,6 +325,14 @@
     </p>
   </li>
 
+  <li>
+    <p>
+      fixed SF bug 3428992: "PF: rules order problem with IPv4 and
+      IPv6". Compiler for PF should group ipv4 and ipv6 NAT rules
+      together, before it generates ipv4 and ipv6 policy rules.
+    </p>
+  </li>
+
 
 </ul>
 
